--- a/index.html
+++ b/index.html
@@ -7,44 +7,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image/png" href="./img/icone.png">
     <title>Filme Véio</title>
 </head>
 
 <body>
-    <div class="container">
-    <div class="logo">
-        <a href="#home"><img src="img/logo.png" alt="logo"></a>
-    </div>
     <div class="navbar">
+        <div class="icon-bar">
+            <img class="button-menu" style="cursor: pointer;" onclick="Show()" src="./img/menu.png">
+            <img class="button-menu" src="./img/logo.png">
 
-        <div class="icon-bar" onclick="Show()">
-            <i></i>
-            <i></i>
-            <i></i>
         </div>
-
-        <ul id="nav-lists">
-            <li class="close"><span onclick="Hide()">×</span></li>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Filmes</a></li>
-            <li><a href="#">Chat</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Login</a></li>
-        </ul>
-
+        <nav>
+            <div class="logo">
+                <img src="./img/logo.png" alt="logo">
+            </div>
+            <ul class="menu-area" id="nav-lists" value="0">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Filmes</a></li>
+                <li><a href="#">Chat</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Login</a></li>
+            </ul>
+        </nav>
     </div>
-    </div>
+
 </body>
 
 <script>
     var navList = document.getElementById("nav-lists");
-function Show() {
-navList.classList.add("_Menus-show");
-}
 
-function Hide(){
-navList.classList.remove("_Menus-show");
-}
+    function Show() {
+        if (navList.value == 1) {
+            navList.classList.remove("_Menus-show");
+            navList.value = 0;
+        } else {
+            navList.classList.add("_Menus-show");
+            navList.value = 1;
+        }
+
+    }
 </script>
 
 </html>
