Producao da pagina home e pagina da lista de filmes

--- a/lista.html
+++ b/lista.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" type="image/png" href="./img/icone.png">
-    <title>Home</title>
+    <title>Lista de filmes</title>
 </head>
 
 <body onchange="myFunction()">
@@ -30,18 +30,11 @@
             </ul>
         </nav>
     </div>
-
-    <div class="container-carousel">
-        <img class="mySlides" src="./img/img-cont-1.jpg">
-        <img class="mySlides" src="./img/img-cont-2.jpg">
-        <img class="mySlides" src="./img/img-cont-3.png">
-    </div>
-    <div class="linha"></div>
     <br>
-    <div class="container-geral-lista">
-        <div class="container-lista">
+    <div class="container-lista-grande">
+        <div class="container-lista-filmes">
             <div class="titulo">
-                <h1>Lista de Filmes...</h1>
+                <h1>Lista de Filmes</h1>
             </div>
             <div class="lista">
                 <img class="img-lista fica" src="./img/poster/goodfellas.jpg">
@@ -49,36 +42,34 @@
                 <img class="img-lista cel-some" src="./img/poster/once-upon-a-time-in-america.jpg">
                 <img class="img-lista cel-some" src="./img/poster/pulp-fiction.jpg">
                 <img class="img-lista tab-sumir" src="./img/poster/the-departed.jpg">
-                <button class="botao-seta"><img src="./img/seta.png"></button>
             </div>
-        </div>
-    </div>
-    <br>
-    <div class="container-geral-forum">
-        <div class="container-forum">
-            <div class="imagem-forum">
-                <img src="./img/chat-img.jpeg">
+            <br>
+            <div class="lista">
+                <img class="img-lista fica" src="./img/poster/goodfellas.jpg">
+                <img class="img-lista fica" src="./img/poster/mean-streets.jpg">
+                <img class="img-lista cel-some" src="./img/poster/once-upon-a-time-in-america.jpg">
+                <img class="img-lista cel-some" src="./img/poster/pulp-fiction.jpg">
+                <img class="img-lista tab-sumir" src="./img/poster/the-departed.jpg">
             </div>
-            <div class="texto-forum">
-                <h1>Chat</h1>
-                <p>Nosso chat tem como finalidade, criar uma comunidade de apreciadores de filmes antigos indicarem e darem feedback de filmes...
-                </p>
-                <button class="botao-forum">Participar!</button>
+            <br>
+            <div class="lista">
+                <img class="img-lista fica" src="./img/poster/goodfellas.jpg">
+                <img class="img-lista fica" src="./img/poster/mean-streets.jpg">
+                <img class="img-lista cel-some" src="./img/poster/once-upon-a-time-in-america.jpg">
+                <img class="img-lista cel-some" src="./img/poster/pulp-fiction.jpg">
+                <img class="img-lista tab-sumir" src="./img/poster/the-departed.jpg">
             </div>
-        </div>
-    </div>
-    <br>
-    <div class="container-geral-forum">
-        <div class="container-forum">
-            <div class="texto-forum">
-                <h1>Um pouco sobre nós</h1>
-                <p>Comecei a fazer o site pois sou um fã de filmes antigos e acho que o filme consegue mostrar o que o diretor pensa sobre a cultura que o filme está inserido...
-                </p>
-                <button class="botao-forum">Saiba mais!</button>
+            <br>
+            <div class="lista">
+                <img class="img-lista fica" src="./img/poster/goodfellas.jpg">
+                <img class="img-lista fica" src="./img/poster/mean-streets.jpg">
+                <img class="img-lista cel-some" src="./img/poster/once-upon-a-time-in-america.jpg">
+                <img class="img-lista cel-some" src="./img/poster/pulp-fiction.jpg">
+                <img class="img-lista tab-sumir" src="./img/poster/the-departed.jpg">
             </div>
-            <div class="imagem-forum">
-                <img src="./img/sobre-img.jpg">
-            </div>
+            <br>
+            <button class="botao-random"><img src="./img/random.png"</button>
+
         </div>
     </div>
     <br>
@@ -89,7 +80,6 @@
         <br>
         <br>
     </div>
-
 </body>
 <script src="./js/main.js"></script>
 <script>
