--- a/index.html
+++ b/index.html
@@ -14,19 +14,20 @@
     <div class="navbar">
         <div class="icon-bar">
             <img class="button-menu" style="cursor: pointer;" onclick="Show()" src="./img/menu.png">
-            <img class="button-menu" src="./img/logo.png">
+            <a href="./index.html"><img class="button-menu" src="./img/logo.png"></a>
+
 
         </div>
         <nav>
             <div class="logo">
-                <img src="./img/logo.png" alt="logo">
+                <a href="./index.html"><img src="./img/logo.png" alt="logo"></a>
             </div>
             <ul class="menu-area" id="nav-lists" value="0">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Filmes</a></li>
-                <li><a href="#">Chat</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Login</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./lista.html">Filmes</a></li>
+                <li><a href="./forum.html">Chat</a></li>
+                <li><a href="./sobre.html">Sobre</a></li>
+                <li><a href="./login.html">Login</a></li>
             </ul>
         </nav>
     </div>
@@ -49,7 +50,7 @@
                 <img class="img-lista cel-some" src="./img/poster/once-upon-a-time-in-america.jpg">
                 <img class="img-lista cel-some" src="./img/poster/pulp-fiction.jpg">
                 <img class="img-lista tab-sumir" src="./img/poster/the-departed.jpg">
-                <button class="botao-seta"><img src="./img/seta.png"></button>
+                <button class="botao-seta"><a href="./lista.html"><img src="./img/seta.png"></a></button>
             </div>
         </div>
     </div>
@@ -63,7 +64,7 @@
                 <h1>Chat</h1>
                 <p>Nosso chat tem como finalidade, criar uma comunidade de apreciadores de filmes antigos indicarem e darem feedback de filmes...
                 </p>
-                <button class="botao-forum">Participar!</button>
+                <button class="botao-forum"><a href="./forum.html">Participar!</a></button>
             </div>
         </div>
     </div>
@@ -74,13 +75,19 @@
                 <h1>Um pouco sobre nós</h1>
                 <p>Comecei a fazer o site pois sou um fã de filmes antigos e acho que o filme consegue mostrar o que o diretor pensa sobre a cultura que o filme está inserido...
                 </p>
-                <button class="botao-forum">Saiba mais!</button>
+                <button class="botao-forum"><a href="./sobre.html">Saiba mais!</a></button>
             </div>
             <div class="imagem-forum">
                 <img src="./img/sobre-img.jpg">
             </div>
         </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <br>
     <div class="footer">
         <br>
