--- a/sobre.html
+++ b/sobre.html
@@ -14,19 +14,20 @@
     <div class="navbar">
         <div class="icon-bar">
             <img class="button-menu" style="cursor: pointer;" onclick="Show()" src="./img/menu.png">
-            <img class="button-menu" src="./img/logo.png">
+            <a href="./index.html"><img class="button-menu" src="./img/logo.png"></a>
+
 
         </div>
         <nav>
             <div class="logo">
-                <img src="./img/logo.png" alt="logo">
+                <a href="./index.html"><img src="./img/logo.png" alt="logo"></a>
             </div>
             <ul class="menu-area" id="nav-lists" value="0">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Filmes</a></li>
-                <li><a href="#">Chat</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Login</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./lista.html">Filmes</a></li>
+                <li><a href="./forum.html">Chat</a></li>
+                <li><a href="./sobre.html">Sobre</a></li>
+                <li><a href="./login.html">Login</a></li>
             </ul>
         </nav>
     </div>
@@ -62,6 +63,13 @@
             </div>
         </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="footer">
         <br>
         <br>
