--- a/Site/public/lista.html
+++ b/Site/public/lista.html
@@ -38,38 +38,38 @@
                 <h1>Lista de Filmes</h1>
             </div>
             <div class="lista">
-                <img class="img-lista fica" src="./img/poster/goodfellas.jpg">
-                <img class="img-lista fica" src="./img/poster/mean-streets.jpg">
-                <img class="img-lista cel-some" src="./img/poster/once-upon-a-time-in-america.jpg">
-                <img class="img-lista cel-some" src="./img/poster/pulp-fiction.jpg">
-                <img class="img-lista tab-sumir" src="./img/poster/the-departed.jpg">
+                <img class="img-lista fica" id="0" src="https://m.media-amazon.com/images/M/MV5BMjZjNDU5YTktZjBlMS00YTRlLTg0YWMtMTBlMjViNmJiNDQ3XkEyXkFqcGdeQXVyMjUxODE0MDY@._V1_SX300.jpg" alt="tt0006907">
+                <img class="img-lista fica" id="10" src="https://m.media-amazon.com/images/M/MV5BNjEzYjIxMjQtNTgxOC00YzFhLWI0NTgtYTY0ZjYyOTg2NTRmXkEyXkFqcGdeQXVyNjMxODMyODU@._V1_SX300.jpg" alt="tt0019968">
+                <img class="img-lista cel-some" id="9" src="https://m.media-amazon.com/images/M/MV5BMDhiN2MwNjgtODMwNC00NzM2LWExNDMtNGYwYjlmM2Y0NTYzL2ltYWdlXkEyXkFqcGdeQXVyNjUzNzQ4NDQ@._V1_SX300.jpg" alt="tt0089736">
+                <img class="img-lista cel-some" id="6" src="https://m.media-amazon.com/images/M/MV5BYTFmY2ZmMzAtYWU4ZC00OWU1LWExNmItZmY2MGMzY2Q4MjJlXkEyXkFqcGdeQXVyOTI0MTUwNzA@._V1_SX300.jpg" alt="tt0004028">
+                <img class="img-lista tab-sumir" id="15" src="https://m.media-amazon.com/images/M/MV5BNjk4ZTQwN2EtNzc3Yy00M2U4LWJjZjUtZDE3NDAxZjQ2MTA2XkEyXkFqcGdeQXVyMDY4MzkyNw@@._V1_SX300.jpg" alt="tt0054791">
             </div>
             <br>
             <div class="lista">
-                <img class="img-lista fica" src="./img/poster/goodfellas.jpg">
-                <img class="img-lista fica" src="./img/poster/mean-streets.jpg">
-                <img class="img-lista cel-some" src="./img/poster/once-upon-a-time-in-america.jpg">
-                <img class="img-lista cel-some" src="./img/poster/pulp-fiction.jpg">
-                <img class="img-lista tab-sumir" src="./img/poster/the-departed.jpg">
+                <img class="img-lista fica" id="5" src="https://m.media-amazon.com/images/M/MV5BODEzOTllN2ItNDg2ZC00YWZhLTgwZmEtMDJkN2E2ZGU1NzVjXkEyXkFqcGdeQXVyMTE4MTQ1MjE@._V1_SX300.jpg" alt="tt0044214">
+                <img class="img-lista fica" id="13" src="https://m.media-amazon.com/images/M/MV5BZjM1YWM0MzEtYmMzNi00NzAzLTk1N2ItMWMxZGI3MWI4ZDc3XkEyXkFqcGdeQXVyNDY1NzU5NjY@._V1_SX300.jpg" alt="tt0011474">
+                <img class="img-lista cel-some" id="11" src="https://m.media-amazon.com/images/M/MV5BZjJmMjJiOWMtZmQyOS00MmExLTliMjgtNGIxNmMxOWJmMWE2XkEyXkFqcGdeQXVyMjM2ODYwMQ@@._V1_SX300.jpg" alt="tt0088629">
+                <img class="img-lista cel-some" id="16" src="https://m.media-amazon.com/images/M/MV5BNjY4YWM3N2YtZmY1NS00OTMwLTgwNzUtZTBlM2Y2NGE5YzExXkEyXkFqcGdeQXVyMTQ3Njg3MQ@@._V1_SX300.jpg" alt="tt0087429">
+                <img class="img-lista tab-sumir" id="1" src="https://m.media-amazon.com/images/M/MV5BMTMyODMxMTg3OV5BMl5BanBnXkFtZTcwMDI3MjE5Mw@@._V1_SX300.jpg" alt="tt0026959">
             </div>
             <br>
             <div class="lista">
-                <img class="img-lista fica" src="./img/poster/goodfellas.jpg">
-                <img class="img-lista fica" src="./img/poster/mean-streets.jpg">
-                <img class="img-lista cel-some" src="./img/poster/once-upon-a-time-in-america.jpg">
-                <img class="img-lista cel-some" src="./img/poster/pulp-fiction.jpg">
-                <img class="img-lista tab-sumir" src="./img/poster/the-departed.jpg">
+                <img class="img-lista fica" id="7" src="https://m.media-amazon.com/images/M/MV5BNTZmMGYyNTItY2JhMy00MWMxLTk5YWItMTEzNzNkZWRjMTc0XkEyXkFqcGdeQXVyMTQ3Njg3MQ@@._V1_SX300.jpg" alt="tt0056531">
+                <img class="img-lista fica" id="14" src="https://m.media-amazon.com/images/M/MV5BMzUzMWMzYTItYzMwMy00NGZiLWIyNzktZDRhMWIzMDRlZGUwXkEyXkFqcGdeQXVyMTY5Nzc4MDY@._V1_SX300.jpg" alt="tt0041396">
+                <img class="img-lista cel-some" id="8" src="https://m.media-amazon.com/images/M/MV5BMWU4N2FjNzYtNTVkNC00NzQ0LTg0MjAtYTJlMjFhNGUxZDFmXkEyXkFqcGdeQXVyNjc1NTYyMjg@._V1_SX300.jpg" alt="tt0050083">
+                <img class="img-lista cel-some" id="2" src="https://m.media-amazon.com/images/M/MV5BMmNmNjdiMmEtMWM3Zi00ODNjLWJmNjItMmY5MGJmMTQ3ZmI4XkEyXkFqcGdeQXVyNzc5MjA3OA@@._V1_SX300.jpg" alt="tt0094100">
+                <img class="img-lista tab-sumir" id="19" src="https://m.media-amazon.com/images/M/MV5BYWFjOTkyYWUtY2ViNS00M2JmLTg2NDYtZWYwMTIxMTU2NWZkXkEyXkFqcGdeQXVyMTA3NzE5MzE@._V1_SX300.jpg" alt="tt0060717">
             </div>
             <br>
             <div class="lista">
-                <img class="img-lista fica" src="./img/poster/goodfellas.jpg">
-                <img class="img-lista fica" src="./img/poster/mean-streets.jpg">
-                <img class="img-lista cel-some" src="./img/poster/once-upon-a-time-in-america.jpg">
-                <img class="img-lista cel-some" src="./img/poster/pulp-fiction.jpg">
-                <img class="img-lista tab-sumir" src="./img/poster/the-departed.jpg">
+                <img class="img-lista fica" id="4" src="https://m.media-amazon.com/images/M/MV5BNmFkMjRlNjEtMDY4NC00ZDc2LWE2NTMtMjIzMWMxOTM1MmZmXkEyXkFqcGdeQXVyMDMxMjQwMw@@._V1_SX300.jpg" alt="tt0023124">
+                <img class="img-lista fica" id="18" src="https://m.media-amazon.com/images/M/MV5BNTg5ZTkyNmItYjYwZC00NTM4LTg2NWItMjEwODczZmUyZjFjXkEyXkFqcGdeQXVyNzcyMTE4NzU@._V1_SX300.jpg" alt="tt0062588">
+                <img class="img-lista cel-some" id="12" src="https://m.media-amazon.com/images/M/MV5BZDdlMDdjMjEtZjg0MC00Y2JlLThhNzItNmI4ZTgxODI4YzczXkEyXkFqcGdeQXVyMTQ2MjQyNDc@._V1_SX300.jpg" alt="tt0095539">
+                <img class="img-lista cel-some" id="3" src="https://m.media-amazon.com/images/M/MV5BNGRiNDUxMjQtZDBjYi00MzYxLWFlZmItMzVkZjNlMDRiZDVmXkEyXkFqcGdeQXVyOTI2MjI5MQ@@._V1_SX300.jpg" alt="tt0044601">
+                <img class="img-lista tab-sumir" id="17" src="https://m.media-amazon.com/images/M/MV5BMTk3MjI1NTg0Ml5BMl5BanBnXkFtZTcwODAwODk0MQ@@._V1_SX300.jpg" alt="tt0057939">
             </div>
             <br>
-            <button class="botao-random"><img src="./img/random.png"</button>
+            <button class="botao-random" onclick="pesquisar_filme()"><img src="./img/random.png"</button>
 
         </div>
     </div>
@@ -90,6 +90,41 @@
 </body>
 <script src="./js/main.js"></script>
 <script>
+    'use strict';
+    window.onload = pesquisar_filme;
+    let id_filme = " ";
+
+    function gerar_numero() {
+        var numero_random = Math.floor(Math.random() * 100000)
+        for (var contador = String(numero_random).length; contador < 7; contador++) {
+            numero_random = '0' + numero_random;
+        }
+        id_filme = 'tt' + numero_random;
+    }
+
+    async function pesquisar_filme() {
+        var cont = 0;
+        while (cont < 20) {
+            var imagem_loop = document.getElementById(`${cont}`);
+            gerar_numero();
+            //let api_key = '9b975cfc'
+            let api_key = 'e0620bd4';
+            const url = `https://www.omdbapi.com/?apikey=${api_key}&i=${id_filme}`;
+            const data = await fetch(url);
+            const response = await data.json();
+            const poster = response.Poster;
+            const imdb = response.imdbID;
+            if (poster == 'N/A') {
+                cont--
+            } else {
+                imagem_loop.src = `${poster}`;
+                imagem_loop.alt = `${imdb}`;
+            }
+            cont++
+        }
+    }
+
+
     function myFunction(x) {
         if (x.matches) { // If media query matches
             navList.classList.add("_Menus-show");
