--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -46,11 +46,11 @@
                 <h1>Lista de Filmes...</h1>
             </div>
             <div class="lista">
-                <img class="img-lista fica" id="0" onclick="filme_individual()" src="https://m.media-amazon.com/images/M/MV5BNTZjNzgzZDktNjA1My00MzkwLTgwZTEtMjBkOTcxM2RmMDZjXkEyXkFqcGdeQXVyNzMwOTY2NTI@._V1_SX300.jpg" alt="tt0074877">
-                <img class="img-lista fica" id="1" src="https://m.media-amazon.com/images/M/MV5BYTkzZjkwZGItY2IwYi00Yzg0LTliMjktY2U3ZWZhNTg2OTI3XkEyXkFqcGdeQXVyNjE5MjUyOTM@._V1_SX300.jpg" alt="tt0031108">
-                <img class="img-lista cel-some" id="2" src="https://m.media-amazon.com/images/M/MV5BNjJhY2ExYWYtNTExOS00NjZjLWEzMDItYmEzZWZlNmQ3Zjk2XkEyXkFqcGdeQXVyNzc5MjA3OA@@._V1_SX300.jpg" alt="tt0061613">
-                <img class="img-lista cel-some" id="3" src="https://m.media-amazon.com/images/M/MV5BYTdiNjllZGQtOGY4YS00NTljLWFhNzItYjE3OWE5NjUzZTM4XkEyXkFqcGdeQXVyMTQ2MjQyNDc@._V1_SX300.jpg" alt="tt0068911">
-                <img class="img-lista tab-sumir" id="4" src="https://m.media-amazon.com/images/M/MV5BMTMzNDMxMjc0M15BMl5BanBnXkFtZTcwNDYyODI5Ng@@._V1_SX300.jpg" alt="tt0050152">
+                <img class="img-lista fica" id="0" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNTZjNzgzZDktNjA1My00MzkwLTgwZTEtMjBkOTcxM2RmMDZjXkEyXkFqcGdeQXVyNzMwOTY2NTI@._V1_SX300.jpg" alt="tt0074877">
+                <img class="img-lista fica" id="1" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BYTkzZjkwZGItY2IwYi00Yzg0LTliMjktY2U3ZWZhNTg2OTI3XkEyXkFqcGdeQXVyNjE5MjUyOTM@._V1_SX300.jpg" alt="tt0031108">
+                <img class="img-lista cel-some" id="2" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNjJhY2ExYWYtNTExOS00NjZjLWEzMDItYmEzZWZlNmQ3Zjk2XkEyXkFqcGdeQXVyNzc5MjA3OA@@._V1_SX300.jpg" alt="tt0061613">
+                <img class="img-lista cel-some" id="3" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BYTdiNjllZGQtOGY4YS00NTljLWFhNzItYjE3OWE5NjUzZTM4XkEyXkFqcGdeQXVyMTQ2MjQyNDc@._V1_SX300.jpg" alt="tt0068911">
+                <img class="img-lista tab-sumir" id="4" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BMTMzNDMxMjc0M15BMl5BanBnXkFtZTcwNDYyODI5Ng@@._V1_SX300.jpg" alt="tt0050152">
                 <button class="botao-seta"><a href="./lista.html"><img src="./img/seta.png"></a></button>
             </div>
         </div>
@@ -100,6 +100,7 @@
 
 </body>
 <script src="./js/main.js"></script>
+<script src="./js/carousel.js"></script>
 <script>
     'use strict';
     window.onload = pesquisar_filme;
@@ -120,8 +121,8 @@
         while (cont < 5) {
             var imagem_loop = document.getElementById(`${cont}`);
             gerar_numero();
-            //let api_key = '9b975cfc'
-            let api_key = 'e0620bd4';
+            let api_key = '9b975cfc'
+                //let api_key = 'e0620bd4';
             const url = `https://www.omdbapi.com/?apikey=${api_key}&i=${id_filme}`;
             const data = await fetch(url);
             const response = await data.json();
@@ -137,8 +138,8 @@
         }
     }
 
-    function filme_individual() {
-        var id_filme_individual = document.getElementById(0);
+    function filme_individual(id_mostrado) {
+        var id_filme_individual = document.getElementById(id_mostrado);
         id_title = id_filme_individual.alt;
         id_src = id_filme_individual.src;
         window.location.href = `./filme-individual.html?id=${id_title}`;
