Atualizando site,inserindo pagina site

--- a/Site/public/filme-individual.html
+++ b/Site/public/filme-individual.html
@@ -24,7 +24,7 @@
             <ul class="menu-area" id="nav-lists" value="0">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./lista.html">Filmes</a></li>
-                <li><a href="./forum.html">Chat</a></li>
+                <li><a href="./chat.html">Chat</a></li>
                 <li><a href="./sobre.html">Sobre</a></li>
                 <li><a href="./login.html">Login</a></li>
             </ul>
