--- a/Site/public/login.html
+++ b/Site/public/login.html
@@ -25,7 +25,7 @@
             <ul class="menu-area" id="nav-lists" value="0">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./lista.html">Filmes</a></li>
-                <li><a href="./forum.html">Chat</a></li>
+                <li><a href="./chat.html">Chat</a></li>
                 <li><a href="./sobre.html">Sobre</a></li>
                 <li><a href="./login.html">Login</a></li>
             </ul>
@@ -44,13 +44,6 @@
             </div>
         </div>
     </form>
-    <div class="footer">
-        <br>
-        <br>
-        <p>Filme Véio © 2021. Todos direitos reservados.</p>
-        <br>
-        <br>
-    </div>
 </body>
 <script src="./js/main.js"></script>
 <script>
