Fazendo a página chat funcionar

--- a/Site/public/login.html
+++ b/Site/public/login.html
@@ -74,6 +74,8 @@
 
                     sessionStorage.login_usuario_meuapp = json.login;
                     sessionStorage.nome_usuario_meuapp = json.nome;
+                    sessionStorage.id_usuario_meuapp = json.idUsuario;
+
                     window.location.href = 'index.html';
                 });
 
