--- a/Site/public/chat.html
+++ b/Site/public/chat.html
@@ -63,14 +63,22 @@
         <div class="chat-container">
             <h1>Chat</h1>
             <div class="mensagem">
-                <div class="texto-mensagem"><input id="chat" name="chat"></div>
-                <button class="btn-chat"><img src="./img/seta.png"</button>
+                <form id="form_publicar" method="post" onsubmit="return publicar()">
+                    <div class="texto-mensagem"><input id="chat" name="descricao"></div>
+                    <button id="btn_publicar" class="btn-chat"><img src="./img/seta.png"></button>
+                </form>
+            </div>
+            <br>
+            <div class="feed">
+                <div id="feed_container" class="container">
+                </div>
             </div>
         </div>
     </div>
     <br>
     <br>
 </body>
+<script src="./js/main.js"></script>
 <script>
     window.onload = mostrar_nome;
 
@@ -82,6 +90,8 @@
             var nome_do_usuario = sessionStorage.login_usuario_meuapp;
             console.log(nome_do_usuario)
             inserir_nome.innerHTML = `Olá <b> ${nome_do_usuario} </b> !`;
+            obterPublicacoes();
+            atualizarFeed();
         }
 
 
@@ -100,6 +110,103 @@
     var x = window.matchMedia("(max-width: 660px)")
     myFunction(x) // Call listener function at run time
     x.addListener(myFunction) // Attach listener function on state changes
+
+    function publicar() {
+        aguardar();
+        var formulario = new URLSearchParams(new FormData(form_publicar));
+        var idUsuario = sessionStorage.id_usuario_meuapp;
+        fetch(`/publicacoes/publicar/${idUsuario}`, {
+            method: "POST",
+            body: formulario
+        }).then(resposta => {
+
+            if (resposta.ok) {
+                obterPublicacoes();
+
+                finalizarAguardar();
+            } else {
+                console.log('Erro ao publicar!');
+                resposta.text().then(texto => {
+                    console.error(texto);
+                    finalizarAguardar(texto);
+                });
+            }
+        });
+
+        return false;
+    }
+
+    function atualizarFeed(publicacoes) {
+        var feed = document.getElementById("feed_container");
+        feed.innerHTML = "";
+        for (let i = 0; i < publicacoes.length; i++) {
+            var publicacao = publicacoes[i];
+
+            var divPublicacao = document.createElement("div")
+            var divNome = document.createElement("div")
+            var divDescricao = document.createElement("div")
+
+            divNome.innerHTML = `${publicacao.nome}:`;
+            divDescricao.innerHTML = publicacao.descricao;
+
+            divPublicacao.className = "publicacao"
+            divNome.className = "nome";
+            divDescricao.className = "descricao";
+
+            divPublicacao.appendChild(divNome);
+            divPublicacao.appendChild(divDescricao);
+
+            feed.appendChild(divPublicacao);
+        }
+    }
+
+    function obterPublicacoes() {
+        aguardar();
+        fetch("/publicacoes")
+            .then(resposta => {
+                if (resposta.ok) {
+                    resposta.json().then(function(resposta) {
+                        atualizarFeed(resposta);
+
+                        finalizarAguardar();
+                    });
+                } else {
+                    console.error('Nenhum dado encontrado ou erro na API');
+                    finalizarAguardar("Nenhum resultado encontrado ou erro na API");
+                }
+            })
+            .catch(function(error) {
+                console.error(`Erro na obtenção das publicações: ${error.message}`);
+            });
+    }
+
+    function obterPublicacoesPorUsuario(idUsuario) {
+        fetch(`/publicacoes/${idUsuario}`)
+            .then(resposta => {
+                if (resposta.ok) {
+                    resposta.json().then(function(resposta) {
+                        console.log(`Dados recebidos: ${JSON.stringify(resposta)}`);
+                        // alert(JSON.stringify(resposta))
+                    });
+                } else {
+                    console.error('Nenhum dado encontrado ou erro na API');
+                }
+            })
+            .catch(function(error) {
+                console.error(`Erro na obtenção das publicações do usuário: ${error.message}`);
+            });
+    }
+
+    function aguardar() {
+        console.log("Aguarde!")
+    }
+
+    function finalizarAguardar(resposta) {
+        console.log("finalizarAguardar")
+        if (resposta) {
+            console.log("correto!")
+        }
+    }
 </script>
 
 </html>
