--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -59,7 +59,7 @@
     <div class="container-geral-forum">
         <div class="container-forum">
             <div class="imagem-forum">
-                <img src="./img/chat-img.jpeg">
+                <img src="https://cinemaemcena.com.br/uploads/img4f3917276b635.jpg">
             </div>
             <div class="texto-forum">
                 <h1>Chat</h1>
