--- a/Site/public/sobre.html
+++ b/Site/public/sobre.html
@@ -50,22 +50,40 @@
             <br>
             <div class="container-forum">
                 <div class="imagem-forum">
-                    <img src="./img/redes-sociais.jpg">
+                    <img src="https://s2.glbimg.com/q7BKzEx0y8OwqiGHozFMxen1tu4=/e.glbimg.com/og/ed/f/original/2019/09/18/the-wizard-of-oz.jpg">
                 </div>
                 <div class="texto-forum">
                     <h1>Minhas Redes Sociais</h1>
                     <div class="botoes-redes">
-                        <button class="redes-sociais"><img src="./img/git.png"></button>
-                        <button class="redes-sociais"><img src="./img/git.png"></button>
-                        <button class="redes-sociais"><img src="./img/git.png"></button>
+                        <a href="https://github.com/brdoliveira">
+                            <button class="redes-sociais"><img src="./img/git.png"></button>
+                            <span class="nome-git">brdoliveira</span>
+                        </a>
                     </div>
+                    <br>
+                    <div class="botoes-redes">
+                        <a href="https://github.com/brdoliveira">
+                            <button class="redes-sociais"><img src="./img/instagram.png"></button>
+                            <span class="nome-git">brdoliveira</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="container-forum">
+                <div class="texto-forum">
+                    <h1>Informe algum erro!</h1>
+                    <p> Para informar algum erro contate-nos:
+                        <br> Telefone: (11) 99579-6043 - Bruno Ribeiro
+                        <br> Email: bruno.oliveira@bandtec.com.br
+                    </p>
+                </div>
+                <div class="imagem-forum">
+                    <img src="https://s2.glbimg.com/q7BKzEx0y8OwqiGHozFMxen1tu4=/e.glbimg.com/og/ed/f/original/2019/09/18/the-wizard-of-oz.jpg">
                 </div>
             </div>
         </div>
     </div>
-    <br>
-    <br>
-    <br>
     <br>
     <br>
     <br>
